Bug 512575 - Themeing broken on macOS: View titles unreadable
With the provided theme change the view titles are readable again.

--- a/bundles/org.eclipse.ui.themes/css/e4_default_mac.css
+++ b/bundles/org.eclipse.ui.themes/css/e4_default_mac.css
@@ -124,5 +124,4 @@ CTabFolder {
 
 CTabFolder CTabItem:selected {
   background-color: #E9E8E9;
-  color: white;
 }
